# rust-hawk

./: .gitignore  .taskcluster.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
docker/: rust-hawk-test.sh
docker/rust-hawk-test/: Dockerfile  setup.sh
hawk/: Cargo.toml  README.md  clippy.toml
hawk/src/: bewit.rs  context.rs  credentials.rs  error.rs  header.rs  lib.rs  mac.rs  payload.rs  request.rs  response.rs
hyper-hawk/: Cargo.toml  README.md
hyper-hawk/src/: authscheme.rs  lib.rs  scheme.rs  serverauth.rs
hyper-hawk/tests/: clientserver.rs  clientserver.rs.orig  interoperability.rs
hyper-hawk/tests/node/: package.json  serve-one.js
hyper-rust/: Cargo.toml
hyper-rust/src/: lib.rs  scheme.rs
node-server/: client.js  package.json  server.js
src/: b64.rs  bewit.rs  context.rs  credentials.rs  error.rs  header.rs  lib.rs  mac.rs  payload.rs  request.rs  response.rs  scheme.rs  sign.rs  util.rs
src/crypto/: holder.rs  mod.rs  openssl.rs  ring.rs
tests/: bewit.rs  clientserver.rs  interoperability.rs  request.rs
tests/node/: serve-one.js
