[package]
name = "hawk"
version = "2.0.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://docs.rs/hawk/"
homepage = "https://docs.rs/hawk/"
description = "Hawk Implementation for Rust"
edition = "2018"

[dev-dependencies]
pretty_assertions = "^0.1.2"

[dependencies]
base64 = "0.10.1"
ring = "0.14.6"
url = "1.7.2"
rand = "0.6.5"
failure = { version = "0.1.5", features = ["derive"] }
