[package]
name = "hawk"
version = "3.0.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://docs.rs/hawk/"
homepage = "https://docs.rs/hawk/"
description = "Hawk Implementation for Rust"
edition = "2018"
build = "build.rs"

[dev-dependencies]
pretty_assertions = "^0.6.1"
futures = "0.1.14"
tokio = "0.1"
hyper = "^0.12"

[features]
default = ["use_ring"]
use_ring = ["ring"]
use_openssl = ["openssl"]

[dependencies]
base64 = "0.10.1"
ring = { version = "0.16.0", optional = true }
openssl = { version = "0.10.20", optional = true }
url = "2.0.0"
rand = "0.7.0"
failure = { version = "0.1.5", features = ["derive"] }
once_cell = "1.0.1"
http = "0.1.17"
