[package]
name = "hawk"
version = "1.0.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://github.com/taskcluster/rust-hawk"
homepage = "https://github.com/taskcluster/rust-hawk"
description = "Hawk Implementation for Rust"

[dev-dependencies]
pretty_assertions = "^0.1.2"

[dependencies]
base64 = "~0.6.0"
ring = "^0.7.3"
time = "^0.1.32"
url = "1.4.0"
rand = "0.3"
error-chain = "0.10.0"
