[package]
name = "hyper-hawk"
version = "0.1.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://github.com/taskcluster/rust-hawk"
homepage = "https://github.com/taskcluster/rust-hawk"
description = "Hawk Implementation for rust using Hyper"

[dependencies]
url = "1.4.0"
hyper = "^0.10.4"
rustc-serialize = "^0.3.15"
ring = "^0.7.3"
time = "^0.1.32"
hawk = { path = "../hawk" }
