[package]
name = "hyper-hawk"
version = "0.1.0"
authors = ["Jonas Finnemann Jensen <jopsen@gmail.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/taskcluster/rust-hawk"
documentation = "https://github.com/taskcluster/rust-hawk"
homepage = "https://github.com/taskcluster/rust-hawk"
description = "Hawk Implementation for rust using Hyper"

[features]
# skip the tests that require node
no-interoperability = []

[dependencies]
url = "1.4.0"
hyper = "^0.11"
rustc-serialize = "^0.3.15"
time = "^0.1.32"
hawk = { path = "../hawk" }

[dev-dependencies]
futures = "0.1.14"
tokio-core = "0.1.9"
